--- a/BrainMaster/app/src/main/res/values/strings.xml
+++ b/BrainMaster/app/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <resources>
     <string name="app_name">BrainMaster</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string-array name="quiz_categories">
+        <item>Conocimiento General</item>
+        <item>Películas</item>
+        <item>Música</item>
+        <item>Videojuegos</item>
+        <item>Ciencia y Naturaleza</item>
+        <item>Deportes</item>
+        <item>Geografía</item>
+    </string-array>
+    <string-array name="quiz_difficulty">
+        <item>Easy</item>
+        <item>Medium</item>
+        <item>Hard</item>
+        <item>Leo Messi</item>
+    </string-array>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
