--- a/RoomAriketa/app/src/main/res/values/strings.xml
+++ b/RoomAriketa/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GPS</string>
+    <string name="add_route_desc">Gehitu ibilbide berria</string>
 </resources>
